@@ -463,10 +463,22 @@ public class MoquiStart {
             System.out.println("ElasticSearch install found in runtime/elasticsearch, pid file found so not starting");
             return null;
         }
-        String[] envArr = { "JAVA_HOME=" + System.getProperty("java.home") };
-        System.out.println("Starting ElasticSearch install found in runtime/elasticsearch, pid file not found (" + envArr[0] + ")");
+        String javaHome = System.getProperty("java.home");
+        System.out.println("Starting ElasticSearch install found in runtime/elasticsearch, pid file not found (" + javaHome + ")");
+        boolean isWindows = System.getProperty("os.name").toLowerCase().startsWith("windows");
         try {
-            Process esProcess = Runtime.getRuntime().exec("./bin/elasticsearch", envArr, new File(esDir));
+            String[] command;
+            if (isWindows) {
+                command = new String[] {"cmd.exe", "/c", "bin\\elasticsearch.bat"};
+            } else {
+                command = new String[] {"./bin/elasticsearch"};
+            }
+            ProcessBuilder pb = new ProcessBuilder(command);
+            pb.redirectErrorStream(true);
+            pb.directory(new File(esDir));
+            pb.environment().put("JAVA_HOME", javaHome);
+            pb.inheritIO();
+            Process esProcess = pb.start();
             System.setProperty("moqui.elasticsearch.started", "true");
             return esProcess;
         } catch (Exception e) {
